# gsw

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: release.yml
config/: gsw.example.toml
docs/: ARCHITECTURE.md
packaging/systemd/: gsw.service
scripts/: package-tar.sh
src/: app.rs  cli.rs  lib.rs  main.rs  metrics.rs  process.rs  procfs.rs  sqlite_store.rs  summary.rs  terminal.rs  time.rs
src/agent/: mod.rs
src/analysis/: trends.rs
src/cli/: mod.rs
src/collectors/: cgroup.rs  go_runtime.rs  mod.rs  procfs.rs
src/config/: mod.rs
src/domain/: metrics.rs  mod.rs  service.rs
src/platform/: process.rs  time.rs
src/presentation/: mod.rs  summary.rs  terminal.rs
src/storage/: sqlite.rs
